--- a/index.html
+++ b/index.html
@@ -17,144 +17,45 @@
     <!-- <link rel="stylesheet" href="index.css" /> -->
   </head>
   <body>
-    <!-- home page -->
-    <!-- navbar -->
+    <!-- login page -->
     <header>
-      <!-- logo is a maybe - still haven't figured out color scheme -->
       <div id="logo-container">
         <img id="logo" src="/assets/startupLogo.svg" alt="make it good logo" />
         <h1 id="make-it-good">Make it Good</h1>
       </div>
-      <ul>
-        <li><a href="index.html">home</a></li>
-        <li><a href="/pages/recipeCatalog.html">recipe catalog</a></li>
-        <li><a href="/pages/uploadRecipe.html">upload recipe</a></li>
-        <!-- if logged in, shows 'my account' -->
-        <li id="user" onclick="showModal()"><a>login/my account</a></li>
-      </ul>
     </header>
 
-    <!-- when login is pressed (user not logged in) this modal shows -->
-    <div id="modal">
-      <div id="login">
-        <h1>Log in</h1>
-        <!-- not super sure how to handle if they have signed in or not -->
-        <form id="login-form" class="d-flex flex-column">
-          <label for="username" class="form-label" id="username"
-            >Username:
-          </label>
-          <input
-            type="text"
-            name="username"
-            id="username"
-            class="form-control"
-            required
-            autocomplete="on"
-          />
-          <label for="password" class="form-label" id="password"
-            >Password:
-          </label>
-          <input
-            type="text"
-            name="password"
-            id="password"
-            class="form-control"
-            required
-            autocomplete="on"
-          />
+    <div id="login">
+      <h1>Log in</h1>
+      <!-- not super sure how to handle if they have signed in or not -->
+      <form id="login-form" class="d-flex flex-column">
+        <label for="username" class="form-label"
+          >Username:
+        </label>
+        <input
+          type="text"
+          name="username"
+          id="username"
+          class="form-control"
+          required
+          autocomplete="on"
+        />
+        <label for="password" class="form-label"
+          >Password:
+        </label>
+        <input
+          type="password"
+          name="password"
+          id="password"
+          class="form-control"
+          required
+          autocomplete="on"
+        />
 
-          <button
-            type="submit"
-            class="btn pt-2"
-            id="login-button"
-            onclick="login()"
-          >
-            Log in/Sign up
-          </button>
-        </form>
-      </div>
-    </div>
-
-    <!-- most recent recipes -->
-    <div id="index-body my-10">
-      <div class="container text-center">
-        <div class="row g-0">
-          <div class="container text-start col-9">
-            <div id="recipe-holder">
-              <h2 class="py-4">Most recent recipes</h2>
-              <div id="recent-recipes" class="row justify-content-start">
-                <div id="recipeCard" class="col">
-                  <a href="/pages/recipePage.html">
-                    <!-- filler image -->
-                    <img
-                      src="/assets/foodbaby.jpg"
-                      alt="filler for image card"
-                      width="300"
-                    />
-                    <h4>Recipe title</h4>
-                    <p>recipe description</p>
-                  </a>
-                </div>
-                <div id="recipeCard" class="col">
-                  <a href="/pages/recipePage.html">
-                    <!-- filler image -->
-                    <img
-                      src="/assets/foodbaby.jpg"
-                      alt="filler for image card"
-                      width="300"
-                    />
-                    <h4>Recipe title</h4>
-                    <p>recipe description</p>
-                  </a>
-                </div>
-              </div>
-              <div id="recent-recipes" class="row justify-content-start">
-                <div id="recipeCard" class="col">
-                  <a href="/pages/recipePage.html">
-                    <!-- filler image -->
-                    <img
-                      src="/assets/foodbaby.jpg"
-                      alt="filler for image card"
-                      width="300"
-                    />
-                    <h4>Recipe title</h4>
-                    <p>recipe description</p>
-                  </a>
-                </div>
-                <div id="recipeCard" class="col">
-                  <a href="/pages/recipePage.html">
-                    <!-- filler image -->
-                    <img
-                      src="/assets/foodbaby.jpg"
-                      alt="filler for image card"
-                      width="300"
-                    />
-                    <h4>Recipe title</h4>
-                    <p>recipe description</p>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- about us -->
-          <div id="about" class="col-3 p-2">
-            <h4 class="py-4">About us</h4>
-            <!-- will replace img with family pic -->
-            <img
-              src="/assets/baking-kid.jpg"
-              alt="placeholder img"
-              width="300"
-              class="pb-4"
-            />
-            <p>
-              We love being in the kitchen and we want to share our recipes with
-              you! These website is a collection of recipes we've found and
-              liked. Enjoy!
-            </p>
-          </div>
-        </div>
-      </div>
+        <button type="reset" class="btn pt-2" id="login-button" onclick="login()">
+          Log in/Sign up
+        </button>
+      </form>
     </div>
 
     <!-- footer -->
