--- a/pages/uploadRecipe.html
+++ b/pages/uploadRecipe.html
@@ -19,13 +19,12 @@
   <body>
     <!-- navbar -->
     <header>
-      <!-- logo is a maybe - still haven't figured out color scheme -->
       <div id="logo-container">
         <img id="logo" src="/assets/startupLogo.svg" alt="make it good logo" />
         <h1 id="make-it-good">Make it Good</h1>
       </div>
       <ul>
-        <li><a href="../index.html">home</a></li>
+        <li><a href="../home.html">home</a></li>
         <li><a href="recipeCatalog.html">recipe catalog</a></li>
         <li><a href="uploadRecipe.html">upload recipe</a></li>
         <!-- if logged in, shows 'my account' -->
